refactor: Update imports to use domain-specific packages and improve logging in ingestion module